<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?android:windowBackground"
    tools:context=".RegistroActivity"
    >
    <ImageButton
        android:id="@+id/regresarOpciones"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="170dp"
        android:background="?android:windowBackground"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/retroceder" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="?cardBackgroundColor"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Log In"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email"
                android:background="@drawable/custom_text"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/hint3"
                android:textColorHint="?android:textColorPrimary"
                android:drawableStart="@drawable/person"
                android:drawableTint="?colorOnPrimary"
                android:drawablePadding="8dp"
                android:textColor="?android:textColorPrimary"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_text"
                android:drawableStart="@drawable/candado"
                android:drawablePadding="8dp"
                android:drawableTint="?colorOnPrimary"
                android:textColorHint="?android:textColorPrimary"
                android:hint="@string/hint4"
                android:padding="8dp"
                android:textColor="?android:textColorPrimary"
                android:inputType="textPassword"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_ingresar"
                android:id="@+id/login_btn"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="?android:colorAccent"
                android:textColor="?android:textColorPrimary"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registroRedirect"
                android:text="@string/hint6"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/version_text"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp" />

</LinearLayout>