<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/title_config"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Botón para cambiar la fuente -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/card"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/textTituloFuente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDescripcionFuente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Pequeño, Predeterminado"
            android:textColor="@color/secondaryText"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Botón para cambiar el color y tema -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/card"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/textTituloColorTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_theme"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDescripcionColorTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Material Theme: Claro/Oscuro"
            android:textColor="@color/secondaryText"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Switch para autocorrección -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/card"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/autocorrect"
            android:textColor="#FCF5FD"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAutocorreccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FCF5FD" />
    </LinearLayout>

    <!-- Switch para habilitar el segundo plano -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/card"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/background_mode"
            android:textColor="#FCF5FD"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchSegundoPlano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#FCF5FD" />
    </LinearLayout>

    <!-- Botón para guardar la configuración -->

    <!-- Pie de página -->

    <Button
        android:id="@+id/saveConfigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/card"
        android:text="@string/save_button" />

    <TextView
        android:id="@+id/version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/version_text"
        android:textColor="#49454F"
        android:textSize="12sp" />

</LinearLayout>
